--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<html>
-<head>
-
-<title> OLYMPIC LOGO </title>
-<link rel="stylesheet" type="text/css" href="style.css">
-
-</head>
-<body class="body_backgorund">
-
-<center>
-    <h1>OLYMPIC LOGO</h1>
-    <canvas id="myCanvas" width="800" height="600">
-    </canvas>
-    <br> 
-</center>
-
-<script src="main.js"></script>
-
-</body>
-</html>
+<html> 
+  <head> 
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <script type="text/javascript"> </script> 
+  </head> 
+  <body class="body_backgorund"> 
+    <div align="center"> 
+      <h1>Paint</h1> 
+      <canvas id="myCanvas" width="800" height="400">
+      </canvas> 
+      <br>
+      <br ><span>Radius - </span> 
+      <input type="text" id="radius" value=20> 
+      <span>Color - </span> 
+      <input type="text" id="color" value="Red"> 
+      <span>Width Of the line - </span> <input type="text" id="width_of_line" value="2"> 
+      <br/> </div>
+      
+      <button onclick="clearArea();">Clear Area</button> 
+    </div> 
+    <script src="main.js"></script>
+</body>      </html>
